# repolens

./: .env.example  .gitignore  DECISIONS.md  LICENSE  Makefile  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260507_0001_initial_initial_system_meta.py  20260507_0002_phase1_users_repos_sync_runs.py  20260507_0003_phase4a_pulls_issues.py  20260507_0004_phase5_inbox.py  20260507_0005_phase6_releases.py  20260507_0006_phase7_timeseries.py  20260507_0007_phase8_digests.py
backend/src/repolens/: cli.py  config.py  db.py  main.py
backend/src/repolens/models/: __init__.py  contributor.py  digest.py  inbox_item.py  issue.py  pull_request.py  release.py  repo.py  stars_daily.py  sync_run.py  traffic_daily.py  user.py
backend/src/repolens/routers/: digests.py  inbox.py  releases.py  repos.py  settings.py  sync.py  triage.py
backend/src/repolens/services/: anthropic_client.py  auth.py  crypto.py  digest_collector.py  digest_generator.py  digest_validator.py  github_client.py  inbox_builder.py  priority.py  release_notes.py  scheduler.py  sync.py  triage.py
backend/tests/: conftest.py  test_contributor_stats.py  test_contributors_rebuild.py  test_crypto.py  test_digest_collector.py  test_digest_generator.py  test_digest_validator.py  test_github_client.py  test_healthz.py  test_inbox_builder.py  test_inbox_endpoint.py  test_priority.py  test_release_notes.py  test_repo_detail_endpoint.py  test_repos_endpoint.py  test_scheduler.py  test_settings_endpoint.py  test_sync_endpoint.py  test_sync_runs_endpoint.py  test_sync_service.py  test_timeseries_endpoints.py  test_visibility.py
frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/digest/: page.tsx
frontend/src/app/releases/: page.tsx
frontend/src/app/repos/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/triage/: page.tsx
frontend/src/components/: HotkeyOverlay.tsx
frontend/src/components/charts/: Sparkline.tsx  TrafficChart.tsx
frontend/src/components/digest/: DigestMarkdown.tsx
frontend/src/components/inbox/: InboxFilters.tsx  InboxRow.tsx
frontend/src/components/releases/: ReleaseDraftPanel.tsx
frontend/src/components/repo-card/: RepoCard.tsx
frontend/src/hooks/: useHotkeys.ts
frontend/src/lib/: api.ts  format.ts
specs/: 01_vision_and_mvp.md  02_data_model.md  03_pages_and_ux.md  04_architecture.md  05_github_integration.md  06_ai_digest.md  07_roadmap.md
(+10 files in other folders)
