[project]
name = "repolens"
version = "0.1.0"
description = "Solo-maintainer cockpit for your OSS surface"
readme = "../README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Rajesh Iyer" }]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "structlog>=24.1",
    "click>=8.1",
    "cryptography>=42.0",
    "apscheduler>=3.10",
]

[project.scripts]
repolens = "repolens.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repolens"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "RUF"]
# B008: FastAPI uses `Depends(get_db)` as a default — that's the documented idiom.
# N818: we name domain exceptions after the condition (SyncBusy), not "...Error".
ignore = ["B008", "N818"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
